# sport-arbitrage

./: .gitignore  pyproject.toml
app/models/: three_way_book_order.py
app/scrapers/: bet365.py
scrapers/: bet365.py
sport_arbitrage/: helpers.py
sport_arbitrage/models/: __init__.py  three_way_book_order.py
sport_arbitrage/scrapers/: bet365.py  galerabet.py
tests/: test_helpers.py
